--- a/‏‏‏‏‏‏index.html
+++ b/‏‏‏‏‏‏index.html
@@ -1,5 +1,5 @@
-<!doctype html>
 
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
@@ -10,145 +10,91 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#f6e9e6;        /* ורוד פסטל עדין */
-      --bg-2:#fff7f4;      /* ורוד בהיר מאוד */
-      --ink:#2b2b2b;       /* טקסט */
-      --muted:#6a6a6a;     /* טקסט משני */
-      --gold:#c59b5f;      /* זהב רך */
-      --pill:#e0c5a2;      /* פסטל זהוב */
-      --card:#fff3eb;      /* לבן-קרם */
+      --bg:#f6e9e6;      /* ורוד פסטל עדין */
+      --bg-2:#fff7f4;    /* ורוד בהיר מאוד */
+      --ink:#2b2b2b;     /* טקסט */
+      --muted:#6a6a6a;   /* טקסט משני */
+      --gold:#c59b5f;    /* זהב רך */
+      --pill:#e0c5a2;    /* פסטל זהוב */
+      --card:#fff3eb;    /* לבן-קרם */
       --shadow: 0 10px 30px rgba(0,0,0,.08);
       --radius:22px;
     }
-
-    * {box-sizing:border-box}
+    * { box-sizing:border-box }
     html,body{
       margin:0;
-      background:
-        radial-gradient(1200px 600px at 85% 10%, #fff, var(--bg) 55%, #f7e9e0 100%);
+      background: radial-gradient(1200px 600px at 85% 10%, #fff, var(--bg) 55%, #f7e9e0 100%);
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color:var(--ink);
     }
+    .wrap{ max-width:1200px; margin:auto; padding:40px 20px 80px; }
+    .hero{ display:grid; grid-template-columns: 1.2fr 1fr; gap:40px; align-items:start; }
 
-    .wrap{
-      max-width:1200px;
-      margin:auto;
-      padding:40px 20px 80px;
-    }
-
-    .hero{
-      display:grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap:40px;
-      align-items:start;
-    }
-
-    /* צד שמאל – כותרות וטקסטים */
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:18px;
-      margin-bottom:12px;
-    }
+    /* שמאל – כותרות וטקסטים */
+    .brand{ display:flex; align-items:center; gap:18px; margin-bottom:12px; }
     .brand .mark{
-      width:64px;height:64px;
-      border-radius:50%;
-      border:3px solid var(--gold);
-      display:grid;place-items:center;
-      background:linear-gradient(135deg,#fff7f1, #ffe9d2);
-      box-shadow: var(--shadow);
-      font-family:"Playfair Display", serif;
-      color:var(--gold);
-      font-size:28px;
-      font-weight:700;
+      width:64px; height:64px; border-radius:50%; border:3px solid var(--gold);
+      display:grid; place-items:center;
+      background:linear-gradient(135deg,#fff7f1,#ffe9d2);
+      box-shadow:var(--shadow);
+      font-family:"Playfair Display", serif; color:var(--gold);
+      font-size:28px; font-weight:700;
     }
-    .brand h1{
-      font: 700 56px/1.05 "Playfair Display", serif;
-      margin:0;color:#1a1a1a; letter-spacing:.2px;
-    }
-    .strap{
-      margin:4px 0 28px;
-      font-weight:600;
-      color:#3b3b3b;
-      letter-spacing:.5px;
-    }
+    .brand h1{ font:700 56px/1.05 "Playfair Display", serif; margin:0; color:#1a1a1a; letter-spacing:.2px; }
+    .strap{ margin:4px 0 28px; font-weight:600; color:#3b3b3b; letter-spacing:.5px; }
 
-    .tagline{
-      font: 600 36px/1.15 "Playfair Display", serif;
-      margin: 18px 0 10px;
-    }
+    .tagline{ font:600 36px/1.15 "Playfair Display", serif; margin:18px 0 10px; }
     .tagline + .tagline{ margin-top:0 }
+    .lead{ margin:18px 0 28px; color:var(--muted); font-size:17px; max-width:540px; }
 
-    .lead{
-      margin:18px 0 28px;
-      color:var(--muted);
-      font-size:17px;
-      max-width:540px;
-    }
-
-    .cta-row{
-      display:flex; gap:12px; flex-wrap:wrap; margin-bottom:26px;
-    }
+    .cta-row{ display:flex; gap:12px; flex-wrap:wrap; margin-bottom:26px; }
     .btn{
-      appearance:none; border:0; cursor:pointer;
-      padding:14px 18px; border-radius:999px;
-      font-weight:600; letter-spacing:.2px;
-      box-shadow: var(--shadow); transition:.2s transform, .2s box-shadow;
+      appearance:none; border:0; cursor:pointer; padding:14px 18px; border-radius:999px;
+      font-weight:600; letter-spacing:.2px; box-shadow:var(--shadow);
+      transition:.2s transform, .2s box-shadow;
     }
-    .btn:active{ transform:translateY(1px); box-shadow: 0 6px 16px rgba(0,0,0,.07)}
-    .btn-primary{ background:var(--gold); color:white }
-    .btn-ghost{ background:white; color:#333; border:1px solid #eee }
+    .btn:active{ transform:translateY(1px); box-shadow:0 6px 16px rgba(0,0,0,.07) }
+    .btn-primary{ background:var(--gold); color:#fff }
+    .btn-ghost{ background:#fff; color:#333; border:1px solid #eee }
 
     .cards{ display:grid; gap:14px; max-width:560px }
     .card{
-      background:var(--card);
-      border:1px solid #f2e3d7;
-      border-radius:var(--radius);
-      padding:16px 18px;
-      box-shadow: var(--shadow);
+      background:var(--card); border:1px solid #f2e3d7; border-radius:var(--radius);
+      padding:16px 18px; box-shadow:var(--shadow);
     }
-    .card h3{ margin:0 0 6px; font:600 20px/1.2 "Playfair Display", serif; color:#222}
+    .card h3{ margin:0 0 6px; font:600 20px/1.2 "Playfair Display", serif; color:#222 }
     .card p{ margin:0; color:#5f5f5f; font-size:15px }
 
-    /* צד ימין – גלריה אנכית */
+    /* ימין – גלריה */
     .gallery{ display:grid; gap:18px }
-    .photo{
-      overflow:hidden;border-radius:18px;background:#ddd; box-shadow:var(--shadow);
-      aspect-ratio: 4 / 5;
-    }
-    .photo img{
-      width:100%; height:100%; object-fit:cover; display:block;
-      transform:scale(1.01);
-    }
+    .photo{ overflow:hidden; border-radius:18px; background:#ddd; box-shadow:var(--shadow); aspect-ratio:4/5; }
+    .photo img{ width:100%; height:100%; object-fit:cover; display:block; transform:scale(1.01) }
 
-    /* פסקת משחקי המילים */
+    /* פסקת משחקי מילים */
     .wordplay{
       margin-top:26px; color:#494949; font-size:15px;
-      background:linear-gradient(180deg, #fff7ef, #fff); border:1px dashed #edd9c9;
-      padding:14px 16px; border-radius:14px; max-width:560px
+      background:linear-gradient(180deg,#fff7ef,#fff);
+      border:1px dashed #edd9c9; padding:14px 16px; border-radius:14px; max-width:560px;
     }
     .wordplay b{ color:#1f1f1f }
 
     /* פוטר */
     .foot{
       display:flex; justify-content:space-between; gap:18px; align-items:center;
-      margin-top:42px; padding-top:22px; border-top:1px solid #f0e2d6; color:#666;
-      flex-wrap:wrap;
+      margin-top:42px; padding-top:22px; border-top:1px solid #f0e2d6; color:#666; flex-wrap:wrap;
     }
-    .domain{
-      font: 600 22px/1.2 "Playfair Display", serif; color:#1d1d1d
-    }
-    .domain small{ color:#7a6a56; font:600 14px; margin-right:6px;letter-spacing:.4px }
+    .domain{ font:600 22px/1.2 "Playfair Display", serif; color:#1d1d1d }
+    .domain small{ color:#7a6a56; font:600 14px; margin-right:6px; letter-spacing:.4px }
     .muted{ color:#808080; font-size:13px }
 
     /* רספונסיביות */
-    @media (max-width: 980px){
-      .hero{ grid-template-columns: 1fr; }
-      .gallery{ order:-1; grid-template-columns: 1fr 1fr; }
-      .photo{ aspect-ratio: 3 / 4 }
+    @media (max-width:980px){
+      .hero{ grid-template-columns:1fr }
+      .gallery{ order:-1; grid-template-columns:1fr 1fr }
+      .photo{ aspect-ratio:3/4 }
       .brand h1{ font-size:46px }
     }
-    @media (max-width: 560px){
+    @media (max-width:560px){
       .gallery{ grid-template-columns:1fr }
       .brand h1{ font-size:40px }
       .tagline{ font-size:30px }
@@ -164,6 +110,7 @@
           <div class="mark">K</div>
           <h1>Kalb Hotel</h1>
         </div>
+
         <div class="strap">BOUTIQUE • CAGE-FREE • 24/7 CARE</div>
 
         <div class="tagline">Where dogs</div>
@@ -194,7 +141,7 @@
         </div>
 
         <p class="wordplay">
-          <b>About the name:</b> “Kalb” is Arabic for “dog,” while in English “Kalb Hotel” echoes the sound of “club hotel.”  
+          <b>About the name:</b> “Kalb” is Arabic for “dog,” while in English “Kalb Hotel” echoes “Club Hotel”.
           A playful blend that hints at a boutique vibe for canine royalty.
         </p>
 
@@ -204,7 +151,7 @@
         </div>
       </div>
 
-      <!-- ימין: שתי תמונות עם רווח קבוע -->
+      <!-- ימין: גלריה -->
       <div class="gallery">
         <figure class="photo">
           <img src="assets/dogs/dog1.jpg" alt="Small white dog with a satin bow on a plush ottoman" loading="eager">
@@ -215,10 +162,6 @@
       </div>
     </section>
   </div>
-redeploy test
-  <!-- bump -->
 </body>
 </html>
-
-
 
