--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -164,5 +163,6 @@
   </div>
 </body>
 </html>
-<!-- rebuild -->
+<!-- force rebuild -->
+
 
