--- a/index.html
+++ b/index.html
@@ -1,301 +1,174 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kalb Hotel — Boutique, Cage-Free • 24/7 Care</title>
-  <meta name="description" content="Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily enrichment, and round-the-clock professional supervision—so your best friend enjoys a true vacation." />
+  <meta name="description" content="Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily pampering, enrichment and 24/7 professional supervision—designed for discerning dog owners." />
   <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg: #faf6f5;          /* שמנתי-ורדרד עדין */
-      --bg-2:#fff;
-      --ink:#2b2b2b;
-      --muted:#6a6a6a;
-      --brand:#c59b5f;        /* זהב רך */
-      --pill:#f0e5df;         /* פסטל נוסף */
-      --accent:#e8d8d2;       /* ורדרד מאוד עדין */
-      --card:#ffffffb3;       /* לבן שקוף קלות */
+      --bg:#f6e9e6;      /* ורוד פסטל עדין */
+      --bg-2:#fff7f4;    /* ורוד בהיר מאוד */
+      --ink:#2b2b2b;     /* טקסט */
+      --muted:#6a6a6a;   /* טקסט משני */
+      --gold:#c59b5f;    /* זהב רך */
+      --pill:#e0c5a2;    /* פסטל זהוב */
+      --card:#fff3eb;    /* לבן-קרם */
       --shadow: 0 10px 30px rgba(0,0,0,.08);
       --radius:22px;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;background:
-      radial-gradient(1200px 600px at 85% 10%, #fff 0%, var(--bg) 55%, #f7efe9 100%);
-      font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--ink)
+    * { box-sizing:border-box }
+    html,body{
+      margin:0;
+      background: radial-gradient(1200px 600px at 85% 10%, #fff, var(--bg) 55%, #f7e9e0 100%);
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color:var(--ink);
     }
-    a{color:inherit;text-decoration:none}
-    .wrap{max-width:1100px;margin:0 auto;padding:28px 20px 60px}
-    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{
-      display:flex;align-items:center;gap:14px
-    }
-    .brand-logo{
-      width:42px;height:42px;border-radius:50%;
-      background:linear-gradient(145deg,#fff, #f5ede7);
-      border:2px solid var(--brand);
-      display:grid;place-items:center;box-shadow:var(--shadow);
-      overflow:hidden;
-    }
-    .brand-logo img{width:100%;height:100%;object-fit:cover}
-    .brand-name{
-      font-family:"Playfair Display", serif;
-      font-weight:700;letter-spacing:.3px;
-      font-size:34px;line-height:1;
-    }
-    .badge{
-      display:inline-flex;gap:8px;align-items:center;
-      padding:6px 12px;border-radius:999px;
-      background:var(--pill); color:#5a524c; font-weight:600; font-size:12px
-    }
-    .lang{
-      display:flex; gap:8px;
-      background:var(--acc); padding:4px; border-radius:999px;
-      background:var(--accent);
-      box-shadow:var(--shadow)
-    }
-    .lang button{
-      border:0; background:transparent; padding:8px 12px; border-radius:999px;
-      font-weight:600; cursor:pointer; color:#5a524c
-    }
-    .lang button.active{ background:var(--brand); color:#fff }
+    .wrap{ max-width:1200px; margin:auto; padding:40px 20px 80px; }
+    .hero{ display:grid; grid-template-columns: 1.2fr 1fr; gap:40px; align-items:start; }
 
-    .hero{
-      margin-top:20px; display:grid; grid-template-columns: 1.15fr .85fr; gap:24px;
-    }
-    .card{
-      background:var(--card); border:1px solid #eee; border-radius:var(--radius);
+    /* שמאל – כותרות וטקסטים */
+    .brand{ display:flex; align-items:center; gap:18px; margin-bottom:12px; }
+    .brand .mark{
+      width:64px; height:64px; border-radius:50%; border:3px solid var(--gold);
+      display:grid; place-items:center;
+      background:linear-gradient(135deg,#fff7f1,#ffe9d2);
       box-shadow:var(--shadow);
+      font-family:"Playfair Display", serif; color:var(--gold);
+      font-size:28px; font-weight:700;
     }
-    .panel{ padding:26px 26px 22px }
-    .title{
-      font-family:"Playfair Display", serif; font-weight:700;
-      font-size:46px; line-height:1.1; margin:8px 0 12px;
-    }
-    .lead{ color:var(--muted); font-size:16.5px; }
+    .brand h1{ font:700 56px/1.05 "Playfair Display", serif; margin:0; color:#1a1a1a; letter-spacing:.2px; }
+    .strap{ margin:4px 0 28px; font-weight:600; color:#3b3b3b; letter-spacing:.5px; }
 
-    .cta-row{ display:flex; gap:12px; margin-top:18px; flex-wrap:wrap }
+    .tagline{ font:600 36px/1.15 "Playfair Display", serif; margin:18px 0 10px; }
+    .tagline + .tagline{ margin-top:0 }
+    .lead{ margin:18px 0 28px; color:var(--muted); font-size:17px; max-width:540px; }
+
+    .cta-row{ display:flex; gap:12px; flex-wrap:wrap; margin-bottom:26px; }
     .btn{
-      display:inline-flex; align-items:center; justify-content:center; gap:10px;
-      padding:12px 18px; border-radius:12px; border:1px solid var(--brand);
-      font-weight:700; cursor:pointer; transition:.2s ease; text-align:center
+      appearance:none; border:0; cursor:pointer; padding:14px 18px; border-radius:999px;
+      font-weight:600; letter-spacing:.2px; box-shadow:var(--shadow);
+      transition:.2s transform, .2s box-shadow;
     }
-    .btn.primary{ background:var(--brand); color:#fff; border-color:transparent }
-    .btn.primary:hover{ filter:saturate(1.05) brightness(1.02) }
-    .btn.ghost{ background:#fff; color:#4b423a }
-    .pillbar{ display:grid; gap:12px; padding:18px }
-    .pill{
-      background:linear-gradient(180deg,#fff, #fbf7f5);
-      border:1px solid #eee; border-radius:16px; padding:16px 18px; box-shadow:var(--shadow)
+    .btn:active{ transform:translateY(1px); box-shadow:0 6px 16px rgba(0,0,0,.07) }
+    .btn-primary{ background:var(--gold); color:#fff }
+    .btn-ghost{ background:#fff; color:#333; border:1px solid #eee }
+
+    .cards{ display:grid; gap:14px; max-width:560px }
+    .card{
+      background:var(--card); border:1px solid #f2e3d7; border-radius:var(--radius);
+      padding:16px 18px; box-shadow:var(--shadow);
     }
-    .pill b{ display:block; font-size:13px; opacity:.85; margin-bottom:6px }
-    .pill p{ margin:0; color:#5f5a55; font-size:14px }
+    .card h3{ margin:0 0 6px; font:600 20px/1.2 "Playfair Display", serif; color:#222 }
+    .card p{ margin:0; color:#5f5f5f; font-size:15px }
 
-    .gallery{ display:grid; gap:16px; grid-template-columns:1fr; }
-    .dog{
-      border-radius:18px; overflow:hidden; aspect-ratio: 4/3;
-      box-shadow:var(--shadow); border:1px solid #eee; background:#f7f2ee
+    /* ימין – גלריה */
+    .gallery{ display:grid; gap:18px }
+    .photo{ overflow:hidden; border-radius:18px; background:#ddd; box-shadow:var(--shadow); aspect-ratio:4/5; }
+    .photo img{ width:100%; height:100%; object-fit:cover; display:block; transform:scale(1.01) }
+
+    /* פסקת משחקי מילים */
+    .wordplay{
+      margin-top:26px; color:#494949; font-size:15px;
+      background:linear-gradient(180deg,#fff7ef,#fff);
+      border:1px dashed #edd9c9; padding:14px 16px; border-radius:14px; max-width:560px;
     }
-    .dog img{ width:100%; height:100%; object-fit:cover; display:block }
+    .wordplay b{ color:#1f1f1f }
 
-    .grid-2{ display:grid; grid-template-columns:1fr 1fr; gap:16px }
-
-    .section{ margin-top:26px; padding:18px 24px }
-    .section h3{ margin:0 0 10px; font-size:18px; letter-spacing:.2px }
-    .section p{ margin:0; color:#5b5753 }
-
-    footer{
-      margin-top:30px; padding:18px; text-align:center; color:#7a7068; font-size:13px
+    /* פוטר */
+    .foot{
+      display:flex; justify-content:space-between; gap:18px; align-items:center;
+      margin-top:42px; padding-top:22px; border-top:1px solid #f0e2d6; color:#666; flex-wrap:wrap;
     }
+    .domain{ font:600 22px/1.2 "Playfair Display", serif; color:#1d1d1d }
+    .domain small{ color:#7a6a56; font:600 14px; margin-right:6px; letter-spacing:.4px }
+    .muted{ color:#808080; font-size:13px }
 
-    /* RTL / LTR toggling */
-    [dir="rtl"] .hero{ grid-template-columns: .85fr 1.15fr }
-    [dir="rtl"] .title{ letter-spacing:0 }
-    [dir="rtl"] .lead{ font-size:17px }
-    @media (max-width: 980px){
-      .hero{ grid-template-columns:1fr; }
-      .title{ font-size:40px }
-      .brand-name{ font-size:30px }
+    /* רספונסיביות */
+    @media (max-width:980px){
+      .hero{ grid-template-columns:1fr }
+      .gallery{ order:-1; grid-template-columns:1fr 1fr }
+      .photo{ aspect-ratio:3/4 }
+      .brand h1{ font-size:46px }
+    }
+    @media (max-width:560px){
+      .gallery{ grid-template-columns:1fr }
+      .brand h1{ font-size:40px }
+      .tagline{ font-size:30px }
     }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <header>
-      <div class="brand">
-        <div class="brand-logo">
-          <!-- אפשר להחליף בתמונה פרוותית מהממת -->
-          <img src="assets/dogs/pompom.jpg" alt="Kalb Hotel" onerror="this.style.display='none'">
+    <section class="hero">
+      <!-- שמאל: לוגו/כותרות/טקסטים -->
+      <div>
+        <div class="brand">
+          <div class="mark">K</div>
+          <h1>Kalb Hotel</h1>
         </div>
-        <div>
-          <div class="brand-name">Kalb Hotel</div>
-          <div class="badge" data-i="badge">Boutique • Cage-Free • 24/7 Care</div>
-        </div>
-      </div>
 
-      <div class="lang" aria-label="Language">
-        <button data-lang="en" class="active">EN</button>
-        <button data-lang="ar">AR</button>
-        <button data-lang="he">HE</button>
-      </div>
-    </header>
+        <div class="strap">BOUTIQUE • CAGE-FREE • 24/7 CARE</div>
 
-    <main class="hero">
-      <!-- left: main content -->
-      <section class="card panel">
-        <h1 class="title" data-i="headline">Where dogs stay like royals.</h1>
-        <p class="lead" data-i="lede">
-          Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily enrichment, and round-the-clock professional supervision—so your best friend enjoys a true vacation.
+        <div class="tagline">Where dogs</div>
+        <div class="tagline">stay like royals.</div>
+
+        <p class="lead">
+          Private suites, daily pampering, and round-the-clock supervision—so your best friend enjoys a five-star experience.
         </p>
 
         <div class="cta-row">
-          <a class="btn primary" href="mailto:info@kalbhotel.com" data-i="cta1">Contact us</a>
-          <a class="btn ghost" href="https://wa.me/0000000000" target="_blank" rel="noopener" data-i="cta2">Call / WhatsApp</a>
+          <a class="btn btn-ghost" href="mailto:info@kalbhotel.com">Contact Us</a>
+          <a class="btn btn-primary" href="https://wa.me/15551234567" target="_blank" rel="noopener">Call / WhatsApp</a>
         </div>
 
-        <div class="grid-2 section card" style="background:linear-gradient(180deg,#fff,#fcf7f4);">
-          <div class="pill">
-            <b data-i="h_lux">Luxury Suites</b>
-            <p data-i="p_lux">Climate-controlled, daily housekeeping, calm ambience.</p>
+        <div class="cards">
+          <div class="card">
+            <h3>Luxury Suites</h3>
+            <p>Elegant, climate-controlled rooms with plush furnishings.</p>
           </div>
-          <div class="pill">
-            <b data-i="h_daily">Daily Activities</b>
-            <p data-i="p_daily">Walks, play sessions, enrichment & gentle training.</p>
+          <div class="card">
+            <h3>Daily Activities</h3>
+            <p>Spa treatments, play sessions, and enrichment.</p>
           </div>
-          <div class="pill">
-            <b data-i="h_super">24/7 Supervision</b>
-            <p data-i="p_super">Experienced handlers and continuous monitoring.</p>
-          </div>
-          <div class="pill">
-            <b data-i="h_world">Worldwide Concept</b>
-            <p data-i="p_world">Designed to meet global hospitality standards.</p>
+          <div class="card">
+            <h3>24/7 Supervision</h3>
+            <p>Attentive staff ensuring safety and comfort.</p>
           </div>
         </div>
 
-        <section class="section card">
-          <h3 data-i="about_h">About the brand</h3>
-          <p data-i="about_p">
-            Kalb Hotel is a trusted, elegant brand for discerning dog owners and partners.
-          </p>
-        </section>
+        <p class="wordplay">
+          <b>About the name:</b> “Kalb” is Arabic for “dog,” while in English “Kalb Hotel” echoes “Club Hotel”.
+          A playful blend that hints at a boutique vibe for canine royalty.
+        </p>
 
-        <section class="section card">
-          <h3 data-i="contact_h">Contact</h3>
-          <p>
-            <span data-i="contact_p">Partnerships & bookings:</span>
-            <a href="mailto:info@kalbhotel.com">info@kalbhotel.com</a>
-            &nbsp;•&nbsp; Domain: <a href="https://kalbhotel.com" target="_blank" rel="noopener">kalbhotel.com</a>
-          </p>
-        </section>
+        <div class="foot">
+          <div class="domain"><small>Domain For Sale ·</small> kalbhotel.com</div>
+          <div class="muted">Designed to meet global hospitality standards. Sought-after by discerning dog owners and partners.</div>
+        </div>
+      </div>
 
-        <section class="section card" style="border:1px dashed var(--brand)">
-          <h3 data-i="for_sale_h">Premium Domain Available</h3>
-          <p data-i="for_sale_p">
-            This premium domain is available for acquisition. Inquiries from luxury hospitality, pet-care and investment groups are welcome.
-          </p>
-        </section>
-      </section>
-
-      <!-- right: gallery -->
-      <aside class="gallery">
-        <div class="dog"><img src="assets/dogs/poodle_elegant.jpg" alt="Elegant poodle"></div>
-        <div class="dog"><img src="assets/dogs/pomeranian_glam.jpg" alt="Glam pomeranian"></div>
-        <div class="dog"><img src="assets/dogs/maltese_suite.jpg" alt="Maltese in suite"></div>
-      </aside>
-    </main>
-
-    <footer>© Kalb Hotel. All rights reserved.</footer>
+      <!-- ימין: גלריה -->
+      <div class="gallery">
+        <figure class="photo">
+          <img src="assets/dogs/dog1.jpg" alt="Small white dog with a satin bow on a plush ottoman" loading="eager">
+        </figure>
+        <figure class="photo">
+          <img src="assets/dogs/dog2.jpg" alt="Fluffy pomeranian on a gold armchair in a pastel room" loading="lazy">
+        </figure>
+      </div>
+    </section>
   </div>
-
-  <script>
-    // --- language packs ---
-    const i18n = {
-      en: {
-        badge: "Boutique • Cage-Free • 24/7 Care",
-        headline: "Where dogs stay like royals.",
-        lede: "Kalb Hotel is a luxury, cage-free dog hotel. Private suites, daily enrichment, and round-the-clock professional supervision—so your best friend enjoys a true vacation.",
-        cta1: "Contact us",
-        cta2: "Call / WhatsApp",
-        h_lux:"Luxury Suites", p_lux:"Climate-controlled, daily housekeeping, calm ambience.",
-        h_daily:"Daily Activities", p_daily:"Walks, play sessions, enrichment & gentle training.",
-        h_super:"24/7 Supervision", p_super:"Experienced handlers and continuous monitoring.",
-        h_world:"Worldwide Concept", p_world:"Designed to meet global hospitality standards.",
-        about_h:"About the brand",
-        about_p:"Kalb Hotel is a trusted, elegant brand for discerning dog owners and partners.",
-        contact_h:"Contact",
-        contact_p:"Partnerships & bookings:",
-        for_sale_h:"Premium Domain Available",
-        for_sale_p:"This premium domain is available for acquisition. Inquiries from luxury hospitality, pet-care and investment groups are welcome."
-      },
-      ar: {
-        badge: "فندق راقٍ • بدون أقفاص • رعاية 24/7",
-        headline: "حيث تقيم الكلاب مثل الملوك.",
-        lede: "Kalb Hotel فندق فاخر للكلاب بدون أقفاص. أجنحة خاصة، تنشيط يومي، وإشراف مهني على مدار الساعة — كي يحظى صديقك بإجازة حقيقية.",
-        cta1: "تواصل معنا",
-        cta2: "اتصال / واتساب",
-        h_lux:"أجنحة فاخرة", p_lux:"تحكم بالمناخ، تنظيف يومي، أجواء هادئة.",
-        h_daily:"أنشطة يومية", p_daily:"نزهات ولعب وتنشيط وتدريب لطيف.",
-        h_super:"إشراف 24/7", p_super:"مشرفون ذوو خبرة ومتابعة مستمرة.",
-        h_world:"مفهوم عالمي", p_world:"مصمم وفق معايير الضيافة العالمية.",
-        about_h:"عن العلامة",
-        about_p:"Kalb Hotel علامة أنيقة وموثوقة لأصحاب الكلاب المميزين وشركائهم.",
-        contact_h:"التواصل",
-        contact_p:"الشراكات والحجوزات:",
-        for_sale_h:"اسم نطاق مميز للبيع",
-        for_sale_p:"اسم النطاق هذا متاح للاستحواذ. نرحب باستفسارات مجموعات الضيافة الفاخرة ورعاية الحيوانات والمستثمرين."
-      },
-      he: {
-        badge:"בוטיק • ללא כלובים • השגחה 24/7",
-        headline:"מקום שהכלב מרגיש בו מלך.",
-        lede:"Kalb Hotel הוא פנסיון יוקרה לכלבים ללא כלובים. סוויטות פרטיות, העשרה יומית והשגחה מקצועית מסביב לשעון — כדי שחברכם ייהנה מחופשה אמיתית.",
-        cta1:"דברו איתנו",
-        cta2:"שיחה / וואטסאפ",
-        h_lux:"סוויטות יוקרה", p_lux:"בקרת אקלים, ניקיון יומי ואווירה רגועה.",
-        h_daily:"פעילות יומית", p_daily:"טיולים, משחקים, העשרה ואימון עדין.",
-        h_super:"השגחה 24/7", p_super:"צוות מנוסה ומעקב רציף.",
-        h_world:"קונספט עולמי", p_world:"מעוצב לפי סטנדרטים בינלאומיים של אירוח.",
-        about_h:"על המותג",
-        about_p:"Kalb Hotel הוא מותג אלגנטי ואמין לבעלי כלבים אניני טעם ולשותפים.",
-        contact_h:"יצירת קשר",
-        contact_p:"שיתופי פעולה והזמנות:",
-        for_sale_h:"דומיין פרימיום למכירה",
-        for_sale_p:"הדומיין זמין לרכישה. נשמח לפניות מגופי אירוח יוקרה, פט-קייר ומשקיעים."
-      }
-    };
-
-    function applyLang(lang){
-      const pack = i18n[lang] || i18n.en;
-      document.documentElement.lang = lang;
-      document.documentElement.dir = (lang === 'ar' || lang === 'he') ? 'rtl' : 'ltr';
-      document.querySelectorAll('[data-i]').forEach(el=>{
-        const key = el.getAttribute('data-i');
-        if(pack[key]) el.textContent = pack[key];
-      });
-      document.querySelectorAll('.lang button').forEach(b=>{
-        b.classList.toggle('active', b.dataset.lang===lang);
-      });
-    }
-
-    // Auto-detect
-    (function(){
-      const nav = (navigator.language || navigator.userLanguage || 'en').toLowerCase();
-      let lang = 'en';
-      if(nav.startsWith('he')) lang = 'he';
-      if(nav.startsWith('ar')) lang = 'ar';
-      applyLang(lang);
-    })();
-
-    // Manual toggle
-    document.querySelectorAll('.lang button').forEach(btn=>{
-      btn.addEventListener('click', ()=>applyLang(btn.dataset.lang));
-    });
-  </script>
 </body>
-
 </html>
+<!-- rebuild -->
+
+
+
 <!-- force rebuild -->
+
 
 
 
